Moved src into webClient to conform to zlux app structure guideline present in wiki
Signed-off-by: Sean Grady <sgrady@rocketsoftware.com>

--- a/webClient/package.json
+++ b/webClient/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.rs.zossystem.subsystems",
+  "name": "org.zowe.zossubsystems",
   "version": "0.9.0",
   "scripts": {
     "start": "webpack --progress --colors --watch",
