--- a/subsystems/package.json
+++ b/subsystems/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors",
+    "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
   "private": true,
@@ -12,6 +13,7 @@
     "@angular/animations": "~6.0.9",
     "@angular/common": "~6.0.9",
     "@angular/compiler": "~6.0.9",
+    "@angular/compiler-cli": "~6.0.9",
     "@angular/core": "~6.0.9",
     "@angular/forms": "~6.0.9",
     "@angular/http": "~6.0.9",
@@ -31,7 +33,7 @@
     "source-map-loader": "~0.2.3",
     "ts-loader": "~4.4.2",
     "tslint": "~5.10.0",
-    "typescript": "~2.9.0",
+    "typescript": "~2.7.2",
     "webpack": "~4.0.0",
     "webpack-cli": "~3.0.0",
     "webpack-config": "^7.2.1",
