--- a/subsystems/package.json
+++ b/subsystems/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~6.0.9",
     "@angular/platform-browser-dynamic": "~6.0.9",
     "@angular/router": "~6.0.9",
+    "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
     "codelyzer": "~4.4.2",
     "core-js": "~2.5.7",
