--- a/webClient/package.json
+++ b/webClient/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "com.rs.zossystem.subsystems",
-  "version": "0.9.0",
+  "name": "org.zowe.zossystem.subsystems",
+  "version": "0.9.4",
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "private": true,
+  "license": "EPL-2.0",
   "dependencies": {},
   "devDependencies": {
     "@angular/animations": "~6.0.9",
@@ -34,7 +34,7 @@
     "typescript": "~2.9.0",
     "webpack": "~4.0.0",
     "webpack-cli": "~3.0.0",
-    "webpack-config": "^7.2.1",
+    "webpack-config": "~7.5.0",
     "zone.js": "~0.8.26"
   }
 }
