--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=zlux:zlux-zos-subsystems
 sonar.projectName=ZLUX zOS Subsystems
 sonar.projectVersion=1.0.0
-sonar.sources=subsystems/src
+sonar.sources=webClient/src
