--- a/webClient/package.json
+++ b/webClient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "org.zowe.zossystem.subsystems",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "scripts": {
     "start": "webpack --progress --colors --watch",
     "build": "webpack --progress --colors",
@@ -22,6 +22,7 @@
     "@angular/router": "~6.0.9",
     "angular-l10n": "~5.2.0",
     "angular2-template-loader": "~0.6.2",
+    "bootstrap": "~4.3.1",
     "codelyzer": "~4.4.2",
     "core-js": "~2.5.7",
     "copy-webpack-plugin": "~4.5.2",
